# SmashMate

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
.cursor/rules/: 001-backend-core.mdc  002-file-structure.mdc  004-database-schema.mdc  005-writing-tests.mdc  005-writing_tests.mdc  006-API-designs.mdc  101-frontend-overview.mdc  102-frontend-file-structure.mdc  103-frontend-api.mdc  104-frontend-tests.mdc
app/: main.py
app/api/: __init__.py  auth.py  matches.py  players.py  recommendations.py  social.py  venues.py
app/core/: auth.py  config.py  database.py  dependencies.py  matches.py  players.py  recommendations.py  social.py  venues.py
app/models/: __init__.py
app/schemas/: auth.py  matches.py  recommendations.py  social.py  venues.py
app/services/: database.py
app/streamlit/: shared.py  streamlit_app.py
app/streamlit/pages/: 1_🏠_Dashboard.py  2_👥_Social.py  3_🏟️_Venues.py  4_🏸_Matches.py  5_🏆_Leaderboards.py
docs/: fake_player_plan.md  instant_messaging_plan.md
scripts/: init_local_supabase.sh
supabase/migrations/: 20240320000000_init_schema.sql  20240323000000_add_messages.sql  20240401000000_add_players.sql
tests/: conftest.py  test_supabase_crud.py  utils.py
tests/api/: test_auth.py  test_matches.py  test_recommendations.py  test_social.py  test_venues.py
tests/integration/: README.md  __init__.py  test_advanced_scenarios.py  test_happy_path.py  test_main.py
tests/unit/: test_auth.py  test_matches.py  test_messaging.py  test_recommendations.py  test_services_db.py  test_social.py  test_supabase_crud.py  test_venues.py
