[project]
name = "smashmate"
version = "0.1.0"
description = "Social badminton doubles tracking app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "geoalchemy2>=0.14.0",
    "trueskill>=0.4.5",
    "shapely>=2.1.1",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "supabase>=2.9.0",
    "pydantic-settings>=2.9.1",
    "pytest-cov>=6.1.1",
    "psycopg2>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
