[project]
name = "smashmate"
version = "0.1.0"
description = "Social badminton doubles tracking app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "asyncpg>=0.24.0",
    "pydantic>=1.8.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "supabase>=0.0.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.23.0",
    "greenlet>=2.0.0",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0"  # Required by geoalchemy2
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
asyncio_mode = "auto"
